Changed education, experience, projects, technical skills

--- a/resume.tex
+++ b/resume.tex
@@ -113,9 +113,9 @@
 
 \begin{center}
     \textbf{\Huge \scshape Wendolee Villegas} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{wxv5045@mavs.uta.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \small 682-551-2632 $|$ \href{mailto:x@x.com}{\underline{wxv5045@mavs.uta.edu}} $|$ 
+    \href{https://linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
+    %--\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
 
 
@@ -123,11 +123,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {University of Texas at Arlington}{Arlington, TX}
+      {Bachelor of Arts in Computer Science}{Aug. 2021 -- Present}
   \resumeSubHeadingListEnd
 
 
@@ -136,13 +133,13 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {College at Home Advisor}{May 2023 -- July 2023}
+      {Apple}{Remote}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
-      \resumeItemListEnd
+        \resumeItem{Trained to solve technical issues in customer's devices which included iOS, iPhones, iPads, and Mac}
+        \resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
+        \resumeItem{}
+        \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
 %    \resumeSubSubheading
@@ -154,27 +151,6 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
 
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 
 
@@ -182,34 +158,33 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\textbf{OurCS@DFW} $|$ \emph{Python, Matplotlib, Numpy, Keras, Tensorflow, Google Colab}}{February 2024}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Developed basic machine learning techniques consisting of neural networks, and nearest neighbor classification}
+            \resumeItem{Implemented hands-on projects in Python using Google Colab, focusing on letter and face recognition}
+            \resumeItem{Gained basic experience with Keras and Tensorflow to train neural networks pattern recognition applications}
+            \resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-
+    \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{}
+            \resumeItem{}
+            \resumeItem{}
+            \resumeItem{}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
 
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages}{: C, Python, C++, Java} \\
+     \textbf{Developer Tools}{: Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda,} \\
     }}
  \end{itemize}
 
