fixed experience, added UNIX project, added organizations

--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 
 % Sections formatting
 \titleformat{\section}{
-  \vspace{-4pt}\scshape\raggedright\large
+  \vspace{10pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
 % Ensure that generate pdf is machine readable/ATS parsable
@@ -127,7 +127,6 @@
       {Bachelor of Arts in Computer Science}{Aug. 2021 -- Present}
   \resumeSubHeadingListEnd
 
-
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
@@ -138,7 +137,7 @@
       \resumeItemListStart
         \resumeItem{Trained to solve technical issues in customer's devices which included iOS, iPhones, iPads, and Mac}
         \resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
-        \resumeItem{}
+        \resumeItem{Adapted quickly to new software updates and tools, ensuring proficiency in the latest Apple products and services}
         \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -156,38 +155,60 @@
 
 %-----------PROJECTS-----------
 \section{Projects}
+
+\resumeSubHeadingListStart
+\resumeProjectHeading
+    {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024 -- Present}
+    \resumeItemListStart
+      \resumeItem{Developing a command line interpreter in C to further understand Unix shell architecture and process management}
+      \resumeItem{Implementing core functionalities, as well as user input commands}
+      \resumeItem{Supporting both interactive and batch modes for user input, with standard output direction and error handling}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
     \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{OurCS@DFW} $|$ \emph{Python, Matplotlib, Numpy, Keras, Tensorflow, Google Colab}}{February 2024}
           \resumeItemListStart
             \resumeItem{Developed basic machine learning techniques consisting of neural networks, and nearest neighbor classification}
-            \resumeItem{Implemented hands-on projects in Python using Google Colab, focusing on letter and face recognition}
-            \resumeItem{Gained basic experience with Keras and Tensorflow to train neural networks pattern recognition applications}
+            \resumeItem{Implemented in Python using Google Colab focusing on letter and face recognition}
+            \resumeItem{Gained basic experience with Keras and Tensorflow to train neural networks for pattern recognition applications}
             \resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024 -- Present}
-          \resumeItemListStart
-            \resumeItem{}
-            \resumeItem{}
-            \resumeItem{}
-            \resumeItem{}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-
-%
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: C, Python, C++, Java} \\
-     \textbf{Developer Tools}{: Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda,} \\
+     \textbf{Developer Tools}{: Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
     }}
  \end{itemize}
 
+%-----------ORGANIZATIONS----------------
+\section{Organizations}
+
+\resumeSubHeadingListStart
+\resumeProjectHeading
+    {{Association of Computer Machinery} \emph}{September 2024 -- Present}
+\resumeProjectHeading
+    {{Society of Women Engineers} \emph}{September 2024 -- Present}
+\resumeProjectHeading
+    {{Society of Hispanic Professional Engineers} \emph}{September 2024 -- Present}  
+\resumeProjectHeading
+    {{Students in Computing and Artificial Intelligence} \emph}{September 2024 -- Present}
+\resumeSubHeadingListEnd
+
+%-----------STATEMENT--------------------
+\section{Statement}
+\resumeSubHeadingListStart
+    \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
+    about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
+    My involvement in campus organizations fuels my growth and enthusiasm for collaborative projects. I’m eager to work on projects 
+    that truly make a difference and work with others who share that drive.
+    }
+\resumeSubHeadingListEnd
 
 %-------------------------------------------
 \end{document}
