changed BA to BS...

--- a/resume.tex
+++ b/resume.tex
@@ -124,7 +124,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Texas at Arlington}{Arlington, TX}
-      {Bachelor of Arts in Computer Science}{Aug. 2021 -- Present}
+      {Bachelor of Science in Computer Science}{Aug. 2021 -- Present}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
