--- a/resume.tex
+++ b/resume.tex
@@ -113,7 +113,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Wendolee Villegas} \\ \vspace{1pt}
-    \small 682-551-2632 $|$ \href{mailto:x@x.com}{\underline{wxv5045@mavs.uta.edu}} $|$ 
+    \small 682-551-2632 $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ 
     \href{https://linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
     %--\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
