--- a/resume.tex
+++ b/resume.tex
@@ -113,8 +113,8 @@
 
 \begin{center}
     \textbf{\Huge \scshape Wendolee Villegas} \\ \vspace{1pt}
-    \small 682-551-2632 $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
+    \small Fort Worth, TX $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ \small 682-551-2632
+    $|$ \href{https://linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
     %--\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
 
@@ -200,7 +200,7 @@
     {{Students in Computing and Artificial Intelligence} \emph}{September 2024 -- Present}
 \resumeSubHeadingListEnd
 
-%-----------STATEMENT--------------------
+%-----------STATEMENT-------------------- THIS CAN PROBABLY BE THE OBJECTIVE
 \section{Statement}
 \resumeSubHeadingListStart
     \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
