--- a/resume.tex
+++ b/resume.tex
@@ -124,7 +124,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Texas at Arlington}{Arlington, TX}
-      {Bachelor of Science in Computer Science}{Aug. 2021 -- Present}
+      {Bachelor of Science in Computer Science}{August 2021 -- December 2025}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
@@ -158,7 +158,7 @@
 
 \resumeSubHeadingListStart
 \resumeProjectHeading
-    {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024 -- Present}
+    {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace, Visual Studio Code}}{September 2024 -- September 2024}
     \resumeItemListStart
       \resumeItem{Developing a command line interpreter in C to further understand Unix shell architecture and process management}
       \resumeItem{Implementing core functionalities, as well as user input commands}
@@ -178,12 +178,13 @@
     \resumeSubHeadingListEnd
 
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C, Python, C++, Java} \\
-     \textbf{Developer Tools}{: Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
-    }}
+      \textbf{Spoken Languages:}{ Spanish, English} \\
+      \textbf{Programming Languages:}{ C, Python, C++, Java} \\
+      \textbf{Developer Tools:}{ Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
+     }}
  \end{itemize}
 
 %-----------ORGANIZATIONS----------------
