--- a/resume.tex
+++ b/resume.tex
@@ -113,7 +113,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Wendolee Villegas} \\ \vspace{1pt}
-    \small Fort Worth, TX $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ \small 682-551-2632
+    \small Fort Worth, Texas $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ \small 682-551-2632
     $|$ \href{https://linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
     %--\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
@@ -123,8 +123,9 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {University of Texas at Arlington}{Arlington, TX}
+      {University of Texas at Arlington}{Arlington, Texas}
       {Bachelor of Science in Computer Science}{August 2021 -- December 2025}
+      \resumeItem{\textbf{GPA:} 3.0}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
@@ -158,7 +159,7 @@
 
 \resumeSubHeadingListStart
 \resumeProjectHeading
-    {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace, Visual Studio Code}}{September 2024 -- September 2024}
+    {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace, Visual Studio Code}}{September 2024 -- Present}
     \resumeItemListStart
       \resumeItem{Developing a command line interpreter in C to further understand Unix shell architecture and process management}
       \resumeItem{Implementing core functionalities, as well as user input commands}
@@ -183,7 +184,7 @@
     \small{\item{
       \textbf{Spoken Languages:}{ Spanish, English} \\
       \textbf{Programming Languages:}{ C, Python, C++, Java} \\
-      \textbf{Developer Tools:}{ Visual Studio Code, GitHub, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
+      \textbf{Developer Tools:}{ Visual Studio Code, GitHub, StarUML, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
      }}
  \end{itemize}
 
@@ -201,8 +202,8 @@
     {{Students in Computing and Artificial Intelligence} \emph}{September 2024 -- Present}
 \resumeSubHeadingListEnd
 
-%-----------STATEMENT-------------------- THIS CAN PROBABLY BE THE OBJECTIVE
-\section{Statement}
+%-----------STATEMENT-------------------- THIS CAN PROBABLY BE THE OBJECTIVE, ORIGINALLY STATEMENT
+\section{Objective}
 \resumeSubHeadingListStart
     \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
     about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
