--- a/resume.tex
+++ b/resume.tex
@@ -118,6 +118,14 @@
     %--\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
 
+%-----------OBJECTIVE-------------------- cater this to each position, could maybe stay on linkedin, but shorten to 1-2 sentences. be active (com sci student seeking etc. etc.)
+\section{Objective}
+\resumeSubHeadingListStart
+    \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
+    about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
+    }
+\resumeSubHeadingListEnd
+
 
 %-----------EDUCATION-----------
 \section{Education}
@@ -127,6 +135,16 @@
       {Bachelor of Science in Computer Science}{August 2021 -- December 2025}
       \resumeItem{\textbf{GPA:} 3.0}
   \resumeSubHeadingListEnd
+
+%-----------PROGRAMMING SKILLS-----------
+\section{Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+      \textbf{Spoken Languages:}{ Spanish, English} \\
+      \textbf{Programming Languages:}{ C, Python, C++, Java, LaTeX} \\
+      \textbf{Developer Tools:}{ Visual Studio Code, GitHub, StarUML, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
+     }}
+ \end{itemize}
 
 %-----------EXPERIENCE-----------
 \section{Experience}
@@ -154,7 +172,7 @@
   \resumeSubHeadingListEnd
 
 
-%-----------PROJECTS-----------
+%-----------PROJECTS----------- add teamwork under a mentor (write how many students i did ourcs with)
 \section{Projects}
 
 \resumeSubHeadingListStart
@@ -178,38 +196,22 @@
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-%-----------PROGRAMMING SKILLS-----------
-\section{Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-      \textbf{Spoken Languages:}{ Spanish, English} \\
-      \textbf{Programming Languages:}{ C, Python, C++, Java} \\
-      \textbf{Developer Tools:}{ Visual Studio Code, GitHub, StarUML, Sublime Text, Google Colab, Jupyter Notebook, Anaconda} \\
-     }}
- \end{itemize}
-
-%-----------ORGANIZATIONS----------------
+%-----------ORGANIZATIONS---------------- add my position for clubs (member)
 \section{Organizations}
 
 \resumeSubHeadingListStart
 \resumeProjectHeading
     {{Association of Computer Machinery} \emph}{September 2024 -- Present}
+    \resumeItem \small{Member}
 \resumeProjectHeading
     {{Society of Women Engineers} \emph}{September 2024 -- Present}
+    \resumeItem \small{Member}
 \resumeProjectHeading
     {{Society of Hispanic Professional Engineers} \emph}{September 2024 -- Present}  
+    \resumeItem \small{Member}
 \resumeProjectHeading
     {{Students in Computing and Artificial Intelligence} \emph}{September 2024 -- Present}
-\resumeSubHeadingListEnd
-
-%-----------STATEMENT-------------------- THIS CAN PROBABLY BE THE OBJECTIVE, ORIGINALLY STATEMENT
-\section{Objective}
-\resumeSubHeadingListStart
-    \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
-    about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
-    My involvement in campus organizations fuels my growth and enthusiasm for collaborative projects. I’m eager to work on projects 
-    that truly make a difference and work with others who share that drive.
-    }
+    \resumeItem \small{Member}
 \resumeSubHeadingListEnd
 
 %-------------------------------------------
