--- a/resume.tex
+++ b/resume.tex
@@ -119,12 +119,12 @@
 \end{center}
 
 %-----------OBJECTIVE-------------------- cater this to each position, could maybe stay on linkedin, but shorten to 1-2 sentences. be active (com sci student seeking etc. etc.)
-\section{Objective}
-\resumeSubHeadingListStart
-    \resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
-    about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
-    }
-\resumeSubHeadingListEnd
+%\section{Objective}
+%\resumeSubHeadingListStart
+    %\resumeItem{I'm a computer science student interested in AI, cybersecurity, data science, and software engineering. I’m passionate 
+    %about using technology to solve real-world problems and learning new skills inside and outside the classroom. 
+    %}
+%\resumeSubHeadingListEnd
 
 
 %-----------EDUCATION-----------
