Flipped projects and experience, until I have more experience

--- a/resume.tex
+++ b/resume.tex
@@ -147,40 +147,13 @@
     }}
  \end{itemize}
 
-%-----------EXPERIENCE-----------
-\section{Experience}
-  \resumeSubHeadingListStart
-
-    \resumeSubheading
-      {College at Home Advisor}{May 2023 -- July 2023}
-      {Apple}{Remote}
-      \resumeItemListStart
-        \resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
-        %\resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
-        \resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
-        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
-        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
-      \resumeItemListEnd
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
-  \resumeSubHeadingListEnd
-
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{UTA Grades} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next,js, Firebase, Figma}}{September 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Collaborating with 8 developers to build an open-source professor rating website using data from 2017 onward}
+            \resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
             \resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
             \resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
             \resumeItem{Currently slated to be in development for an academic year, targeting launch before Spring 2025 registration}
@@ -214,6 +187,34 @@
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd
+
+%-----------EXPERIENCE-----------
+\section{Experience}
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {College at Home Advisor}{May 2023 -- July 2023}
+      {Apple}{Remote}
+      \resumeItemListStart
+        \resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
+        %\resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
+        \resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
+        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
+        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
+      \resumeItemListEnd
+      
+% -----------Multiple Positions Heading-----------
+%    \resumeSubSubheading
+%     {Software Engineer I}{Oct 2014 - Sep 2016}
+%     \resumeItemListStart
+%        \resumeItem{Apache Beam}
+%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
+%     \resumeItemListEnd
+%    \resumeSubHeadingListEnd
+%-------------------------------------------
+
+  \resumeSubHeadingListEnd
+
 
 %-----------ORGANIZATIONS-----------
 \section{Organizations}
