added metrics to apple job

--- a/resume.tex
+++ b/resume.tex
@@ -196,11 +196,13 @@
       {College at Home Advisor}{May 2023 -- July 2023}
       {Apple}{Remote}
       \resumeItemListStart
-        \resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
-        %\resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
-        \resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
+        %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
+        \resumeItem{Quickly delivered technical remote support to customer's devices which included iOS, iPhones, and iPads}
+        %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
+        \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
         \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
-        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
+        %\resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
+        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, earning 80\%+ customer satisfaction ratings}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -221,7 +223,7 @@
 
 \resumeSubHeadingListStart
 \resumeProjectHeading
-    {{Association of Computer Machinery} \emph} {\small September 2024 -- Present} % date code is wrong but looks good on paper
+    {{Association of Computer Machinery} \emph} {\small September 2024 -- Present}
     \resumeItem \small{Member}
 \resumeProjectHeading
     {{Society of Women Engineers} \emph}{September 2024 -- Present}
