modified UTA Grades

--- a/resume.tex
+++ b/resume.tex
@@ -153,9 +153,12 @@
       \resumeProjectHeading
           {\textbf{UTA Grades} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next,js, Firebase, Figma}}{September 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
-            \resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
-            \resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
+            %\resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
+            \resumeItem{Building an open-source professor rating website using data from 2017 onward with a team of 20 developers}
+            %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
+            \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
+            %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
+            \resumeItem{Improving UI through tech stacks, creating responsive, user-freindly designs}
             \resumeItem{Currently slated to be in development for an academic year, targeting launch before Spring 2025 registration}
           \resumeItemListEnd
 
