modified Simple Unix Shell

--- a/resume.tex
+++ b/resume.tex
@@ -174,10 +174,11 @@
       \resumeProjectHeading
           {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace, Visual Studio Code}}{September 2024}
           \resumeItemListStart
-            \resumeItem{Developed a command line interpreter in C to further understand shell architecture and process management}
-            \resumeItem{Implemented core functionalities, as well as user input commands with tokenization and parsing}
-            \resumeItem{Supported interactive and batch modes for user input by integrating file I/O, and output direction with error handling}
-            %\resumeItem{}
+            \resumeItem{Created a command line interpreter in C to further understand shell architecture and process management}
+            %\resumeItem{Implemented core functionalities, as well as user input commands with tokenization and parsing}
+            \resumeItem{Built features like command execution, pipelining, and I/O redirection, creating a responsive and efficient shell}
+            %\resumeItem{Supported interactive and batch modes for user input by integrating file I/O, output redirection, and error handling}
+            \resumeItem{Implemented file I/O and error handling to support both interactive and batch modes for user input}
           \resumeItemListEnd
 
       \resumeProjectHeading
