--- a/resume.tex
+++ b/resume.tex
@@ -185,9 +185,10 @@
           {\textbf{Pattern Recognition - OurCS@DFW} $|$ \emph{Matplotlib, Numpy, Keras, Tensorflow, Google Colab}}{February 2024}
           \resumeItemListStart
             \resumeItem{Developed basic machine learning techniques consisting of neutral networks, and nearest neighbor classification}
-            \resumeItem{Rapidly applied techniques using Python and Google Colab, focusing on letter and face recognition}
-            \resumeItem{Gained basic experience with Keras and Tensorflow to train neural networks for pattern recognition applications}
-            \resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
+            \resumeItem{Implemented using Python and Google Colab, focusing on optical character recognition and digit recognition}
+            \resumeItem{Gained experience with Keras and Tensorflow to train neural networks for pattern recognition applications}
+            %\resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
+            \resumeItem{Developed skills in a supervised environment using learned methods on MNIST dataset, achieving 97\% accuracy}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd
