--- a/resume.tex
+++ b/resume.tex
@@ -158,7 +158,7 @@
             %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
             \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
             %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
-            \resumeItem{Improving UI through tech stacks, creating responsive, user-freindly designs}
+            \resumeItem{Improving UI through tech stacks, creating responsive, user-friendly designs}
             \resumeItem{Currently slated to be in development for an academic year, targeting launch before Spring 2025 registration}
           \resumeItemListEnd
 
