--- a/resume.tex
+++ b/resume.tex
@@ -172,7 +172,7 @@
 %          \resumeItemListEnd
 
       \resumeProjectHeading
-          {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace, Visual Studio Code}}{September 2024}
+          {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024}
           \resumeItemListStart
             \resumeItem{Created a command line interpreter in C to further understand shell architecture and process management}
             %\resumeItem{Implemented core functionalities, as well as user input commands with tokenization and parsing}
@@ -182,13 +182,13 @@
           \resumeItemListEnd
 
       \resumeProjectHeading
-          {\textbf{Pattern Recognition - OurCS@DFW} $|$ \emph{Matplotlib, Numpy, Keras, Tensorflow, Google Colab}}{February 2024}
+          {\textbf{Pattern Recognition - OurCS@DFW} $|$ \emph{Matplotlib, Keras, Tensorflow, Google Colab}}{February 2024}
           \resumeItemListStart
             \resumeItem{Developed basic machine learning techniques consisting of neutral networks, and nearest neighbor classification}
             \resumeItem{Implemented using Python and Google Colab, focusing on optical character recognition and digit recognition}
             \resumeItem{Gained experience with Keras and Tensorflow to train neural networks for pattern recognition applications}
             %\resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
-            \resumeItem{Developed skills in a supervised environment using learned methods on MNIST dataset, achieving 97\% accuracy}
+            \resumeItem{Trained model in a supervised environment using learned methods on MNIST dataset, achieving 97\% accuracy}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd
