--- a/resume.tex
+++ b/resume.tex
@@ -145,7 +145,7 @@
       {Apple}{Remote}
       \resumeItemListStart
         %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
-        \resumeItem{Quickly delivered technical remote support to customer's devices which included iOS, iPhones, and iPads}
+        \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
         %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
         \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
         \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
