--- a/resume.tex
+++ b/resume.tex
@@ -115,8 +115,8 @@
 
 \begin{center}
     \textbf{\Huge \scshape Wendolee Villegas} \\ \vspace{1pt}
-    \small Fort Worth, Texas $|$ \href{mailto:x@x.com}{\underline{wvr0312@gmail.com}} $|$ \small 682-551-2632 $|$
-    \href{https://www.linkedin.com/in/wendolee-villegas-565440252/}{\underline{linkedin.com/in/wendoleevillegas}}
+    \small Fort Worth, Texas $|$ \href{mailto:x@x.com}{{wvr0312@gmail.com}} $|$ \small 682-551-2632 $|$
+    \href{https://www.linkedin.com/in/wendolee-villegas-565440252/}{{linkedin.com/in/wendoleevillegas}}
     %\href{https://github.com/...}{\underline{github.com/jake}}
 \end{center}
 
@@ -131,9 +131,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {University of Texas at Arlington}{Arlington, Texas}
-      {Bachelor of Science in Computer Science}{August 2021 -- December 2025}
-      \item \textbf {GPA:}{ 3.0}
+      {University of Texas at Arlington, Arlington TX}{December 2025}
+      {Bachelor of Science in Computer Science}{\textbf{GPA:} 3.0}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
@@ -158,10 +157,10 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{UTA Grades} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next,js, Firebase, Figma}}{September 2024 -- Present}
+          {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next,js, Firebase, Figma}}{September 2024 -- Present}
           \resumeItemListStart
             %\resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
-            \resumeItem{Building an open-source professor rating website using data from 2017 onward with a team of 20 developers}
+            \resumeItem{Building a cross-functional professor rating website using real data from 2017 onward with a team of 20 developers}
             %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
             \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
             %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
@@ -169,14 +168,14 @@
             \resumeItem{Currently slated to be in development for an academic year, targeting launch before Spring 2025 registration}
           \resumeItemListEnd
 
-%      \resumeProjectHeading
-%          {\textbf{Image Segmentation - Students in Computing and AI} $|$ \emph{PyTorch, U-Net}}{September 2024 -- Present}
-%          \resumeItemListStart
-%            \resumeItem{}
-%            \resumeItem{}
-%            \resumeItem{}
-%            \resumeItem{}
-%          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Image Segmentation - Students in Computing and AI} $|$ \emph{PyTorch, U-Net}}{September 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{}
+            \resumeItem{}
+            \resumeItem{}
+            \resumeItem{}
+          \resumeItemListEnd
 
       \resumeProjectHeading
           {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024}
@@ -195,7 +194,7 @@
             \resumeItem{Implemented using Python and Google Colab, focusing on optical character recognition and digit recognition}
             \resumeItem{Gained experience with Keras and Tensorflow to train neural networks for pattern recognition applications}
             %\resumeItem{Developed problem-solving abilities by applying machine learning methods to real-world data sets}
-            \resumeItem{Trained model in a supervised environment using learned methods on MNIST dataset, achieving 97\% accuracy}
+            \resumeItem{Trained model in a supervised, professor-led environment on the MNIST dataset, achieving 97\% accuracy}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd
@@ -215,19 +214,12 @@
 \section{Organizations}
 
 \resumeSubHeadingListStart
-\resumeProjectHeading
-    {{Association of Computer Machinery} \emph} {\small September 2024 -- Present}
-    \resumeItem \small{Member}
-\resumeProjectHeading
-    {{Society of Women Engineers} \emph}{September 2024 -- Present}
-    \resumeItem \small{Member}
-\resumeProjectHeading
-    {{Society of Hispanic Professional Engineers} \emph}{September 2024 -- Present}  
-    \resumeItem \small{Member}
-\resumeProjectHeading
-    {{Students in Computing and Artificial Intelligence} \emph}{September 2024 -- Present}
-    \resumeItem \small{Member}
+    \resumeItem{\textbf{Association for Computing Machinery}, Member}
+    \resumeItem{\textbf{Society of Women Engineers}, Member}
+    \resumeItem{\textbf{Society of Hispanic Professional Engineers}, Member}
+    \resumeItem{\textbf{Students in Computing and Artificial Intelligence}, Member}
 \resumeSubHeadingListEnd
+
 
 %-------------------------------------------
 \end{document}
